--- a/读书笔记/《码出高效》.md
+++ b/读书笔记/《码出高效》.md
@@ -49,8 +49,8 @@
 ### 2、HTTPS
 
 - 哈希算法：MD5、 SHA
-- 非对称加密：AES、DES、3DES
-- 对称加密：RSA
+- 对称加密：AES、DES、3DES
+- 非对称加密：RSA
 - Https握手过程
   - 客户端给出协议版本号、一个客户端随机数A（Client random）以及客户端支持的加密方式
   - 服务端确认双方使用的加密方式，并给出数字证书、一个服务器生成的随机数B（Server random）
